tempfile/derive_more/tests/compile_fail/as_mut/enum.rs
#[derive(derive_more::AsMut)]
enum Foo {
    Bar(i32),
    Baz(i32),
}

fn main() {}
